--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.32.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-fileupload": "^1.4.0",
     "mongoose": "^6.6.7",
     "morgan": "~1.9.1",
     "node-fetch": "2",
     "uid2": "^1.0.0",
-    "cloudinary": "^1.32.0",
-    "express-fileupload": "^1.4.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
-    "prettier": "2.7.1",
-    "node-fetch": "2"
+    "node-fetch": "2",
+    "prettier": "2.7.1"
   },
   "prettier": {
     "trailingComma": "es5",
